@@ -289,6 +289,7 @@ $magicWords = array(
 	'collation_zh_stroke'     => array( 1,    'zh-stroke' ),
 	'collation_zh_stroke_hans'=> array( 1,    'zh-stroke-hans' ),
 	'collation_zh_stroke_hant'=> array( 1,    'zh-stroke-hant' ),
+	'collation_zh_zhuyin'     => array( 1,    'zh-zhuyin' ),
 	'int'                     => array( 0,    'INT:' ),
 	'sitename'                => array( 1,    'SITENAME' ),
 	'ns'                      => array( 0,    'NS:' ),
@@ -1913,6 +1914,7 @@ This cannot be undone.',
 'collation-zh-stroke'           => 'Chinese (Stroke)',
 'collation-zh-stroke-hans'      => 'Chinese (Stroke, Simplified)',
 'collation-zh-stroke-hant'      => 'Chinese (Stroke, Traditional)',
+'collation-zh-zhuyin'           => 'Chinese (Zhuyin)',
 'yournick'                      => 'New signature:',
 'prefs-help-signature'          => 'Comments on talk pages should be signed with "<nowiki>~~~~</nowiki>" which will be converted into your signature and a timestamp.',
 'badsig'                        => 'Invalid raw signature.
