@@ -100,6 +100,44 @@ class GenerateCollationDataZh extends Maintenance {
 			array( $magic . codepointToUtf8( 0x2800 + 39 ), 39 ),
 			array( $magic . codepointToUtf8( 0x2800 + 48 ), 48 ),
 		) );
+		$this->generateFirstChars( 'zh@collation=zhuyin', array(
+			array( $magic . 'ㄅ', 'ㄅ' ),
+			array( $magic . 'ㄆ', 'ㄆ' ),
+			array( $magic . 'ㄇ', 'ㄇ' ),
+			array( $magic . 'ㄈ', 'ㄈ' ),
+			array( $magic . 'ㄉ', 'ㄉ' ),
+			array( $magic . 'ㄊ', 'ㄊ' ),
+			array( $magic . 'ㄋ', 'ㄋ' ),
+			array( $magic . 'ㄌ', 'ㄌ' ),
+			array( $magic . 'ㄍ', 'ㄍ' ),
+			array( $magic . 'ㄎ', 'ㄎ' ),
+			array( $magic . 'ㄏ', 'ㄏ' ),
+			array( $magic . 'ㄐ', 'ㄐ' ),
+			array( $magic . 'ㄑ', 'ㄑ' ),
+			array( $magic . 'ㄒ', 'ㄒ' ),
+			array( $magic . 'ㄓ', 'ㄓ' ),
+			array( $magic . 'ㄔ', 'ㄔ' ),
+			array( $magic . 'ㄕ', 'ㄕ' ),
+			array( $magic . 'ㄖ', 'ㄖ' ),
+			array( $magic . 'ㄗ', 'ㄗ' ),
+			array( $magic . 'ㄘ', 'ㄘ' ),
+			array( $magic . 'ㄙ', 'ㄙ' ),
+			array( $magic . 'ㄚ', 'ㄚ' ),
+			array( $magic . 'ㄛ', 'ㄛ' ),
+			array( $magic . 'ㄜ', 'ㄜ' ),
+			array( $magic . 'ㄞ', 'ㄞ' ),
+			array( $magic . 'ㄟ', 'ㄟ' ),
+			array( $magic . 'ㄠ', 'ㄠ' ),
+			array( $magic . 'ㄡ', 'ㄡ' ),
+			array( $magic . 'ㄢ', 'ㄢ' ),
+			array( $magic . 'ㄣ', 'ㄣ' ),
+			array( $magic . 'ㄤ', 'ㄤ' ),
+			array( $magic . 'ㄥ', 'ㄥ' ),
+			array( $magic . 'ㄦ', 'ㄦ' ),
+			array( $magic . 'ㄧ', 'ㄧ' ),
+			array( $magic . 'ㄨ', 'ㄨ' ),
+			array( $magic . 'ㄩ', 'ㄩ' ),
+		) );
 	}
 
 	function generateFirstChars( $locale, $firstChars ) {
