@@ -1,0 +1,1 @@
+a:36:{i:0;a:2:{i:0;s:6:"﷐ㄅ";i:1;s:3:"ㄅ";}i:1;a:2:{i:0;s:6:"﷐ㄆ";i:1;s:3:"ㄆ";}i:2;a:2:{i:0;s:6:"﷐ㄇ";i:1;s:3:"ㄇ";}i:3;a:2:{i:0;s:6:"﷐ㄈ";i:1;s:3:"ㄈ";}i:4;a:2:{i:0;s:6:"﷐ㄉ";i:1;s:3:"ㄉ";}i:5;a:2:{i:0;s:6:"﷐ㄊ";i:1;s:3:"ㄊ";}i:6;a:2:{i:0;s:6:"﷐ㄋ";i:1;s:3:"ㄋ";}i:7;a:2:{i:0;s:6:"﷐ㄌ";i:1;s:3:"ㄌ";}i:8;a:2:{i:0;s:6:"﷐ㄍ";i:1;s:3:"ㄍ";}i:9;a:2:{i:0;s:6:"﷐ㄎ";i:1;s:3:"ㄎ";}i:10;a:2:{i:0;s:6:"﷐ㄏ";i:1;s:3:"ㄏ";}i:11;a:2:{i:0;s:6:"﷐ㄐ";i:1;s:3:"ㄐ";}i:12;a:2:{i:0;s:6:"﷐ㄑ";i:1;s:3:"ㄑ";}i:13;a:2:{i:0;s:6:"﷐ㄒ";i:1;s:3:"ㄒ";}i:14;a:2:{i:0;s:6:"﷐ㄓ";i:1;s:3:"ㄓ";}i:15;a:2:{i:0;s:6:"﷐ㄔ";i:1;s:3:"ㄔ";}i:16;a:2:{i:0;s:6:"﷐ㄕ";i:1;s:3:"ㄕ";}i:17;a:2:{i:0;s:6:"﷐ㄖ";i:1;s:3:"ㄖ";}i:18;a:2:{i:0;s:6:"﷐ㄗ";i:1;s:3:"ㄗ";}i:19;a:2:{i:0;s:6:"﷐ㄘ";i:1;s:3:"ㄘ";}i:20;a:2:{i:0;s:6:"﷐ㄙ";i:1;s:3:"ㄙ";}i:21;a:2:{i:0;s:6:"﷐ㄚ";i:1;s:3:"ㄚ";}i:22;a:2:{i:0;s:6:"﷐ㄛ";i:1;s:3:"ㄛ";}i:23;a:2:{i:0;s:6:"﷐ㄜ";i:1;s:3:"ㄜ";}i:24;a:2:{i:0;s:6:"﷐ㄞ";i:1;s:3:"ㄞ";}i:25;a:2:{i:0;s:6:"﷐ㄟ";i:1;s:3:"ㄟ";}i:26;a:2:{i:0;s:6:"﷐ㄠ";i:1;s:3:"ㄠ";}i:27;a:2:{i:0;s:6:"﷐ㄡ";i:1;s:3:"ㄡ";}i:28;a:2:{i:0;s:6:"﷐ㄢ";i:1;s:3:"ㄢ";}i:29;a:2:{i:0;s:6:"﷐ㄣ";i:1;s:3:"ㄣ";}i:30;a:2:{i:0;s:6:"﷐ㄤ";i:1;s:3:"ㄤ";}i:31;a:2:{i:0;s:6:"﷐ㄥ";i:1;s:3:"ㄥ";}i:32;a:2:{i:0;s:6:"﷐ㄦ";i:1;s:3:"ㄦ";}i:33;a:2:{i:0;s:6:"﷐ㄧ";i:1;s:3:"ㄧ";}i:34;a:2:{i:0;s:6:"﷐ㄨ";i:1;s:3:"ㄨ";}i:35;a:2:{i:0;s:6:"﷐ㄩ";i:1;s:3:"ㄩ";}}
