@@ -26,6 +26,7 @@ production.
   and zh-stroke-hant (all require ICU above 4.8rc1).
 * New category sort key syntax: [[Category:Foo|Bar|uppercase=Baz]]. {{DEFAULTSORT: }} also
   accepts similar things like {{DEFAULTSORT:Bar|uppercase=Baz|noerror}} now.
+* New category collation for Chinese: zh-zhuyin (requires ICU 50rc+).
 
 === Bug fixes in 1.21 ===
 * (bug 40353) SpecialDoubleRedirect should support interwiki redirects.
